--- a/backend/FreshTracks/.gitignore
+++ b/backend/FreshTracks/.gitignore
@@ -125,5 +125,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#sam
+samconfig.toml
+
 
 # End of https://www.gitignore.io/api/osx,node,linux,windows
