--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "aws-iot-device-sdk": "^2.2.3",
     "aws-sdk": "^2.646.0",
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "core-js": "^2.6.9",
     "dropzone": "^5.7.0",
     "express": "^4.17.1",
