added some auth headers to lambda

--- a/backend/FreshTracks/template.yaml
+++ b/backend/FreshTracks/template.yaml
@@ -61,7 +61,7 @@ Globals:
     EndpointConfiguration: EDGE
     TracingEnabled: TRUE
     Cors: 
-      AllowMethods: "'OPTIONS,POST'"
+      AllowMethods: "'OPTIONS,POST,GET'"
       AllowHeaders: "'Content-Type'"
       AllowOrigin: "'*'"
 Resources:
