--- a/backend/FreshTracks/Lambda/package.json
+++ b/backend/FreshTracks/Lambda/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.478.0",
-    "aws-xray-sdk": "^3.2.0",
+    "aws-embedded-metrics": "^2.0.2",    
+    "aws-xray-sdk-core": "^3.2.0",
     "axios": "^0.21.1",
     "fast-xml-parser": "^3.16.0",
     "gpx-parse": "^0.10.4",
