Add X-Ray permissions to StepFunctions IAM role

--- a/backend/FreshTracks/template.yaml
+++ b/backend/FreshTracks/template.yaml
@@ -474,6 +474,10 @@ Resources:
                 - Effect: Allow
                   Action:
                     - "lambda:InvokeFunction"
+                    - "xray:PutTelemetryRecords"
+                    - "xray:GetSamplingRules"
+                    - "xray:GetSamplingTargets"
+                    - "xray:PutTraceSegments"
                   Resource: "*"
 
 ##########################################
