--- a/package.json
+++ b/package.json
@@ -5,47 +5,53 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "ssri": "^8.0.1",
+    "is-svg": "^4.2.2"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.2.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@auth0/auth0-spa-js": "^1.13.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "aws-iot-device-sdk": "^2.2.3",
-    "aws-sdk": "^2.646.0",
+    "aws-sdk": "^2.868.0",
     "axios": ">=0.21.1",
-    "core-js": "^2.6.9",
-    "dropzone": "^5.7.0",
+    "core-js": "^2.6.12",
+    "dropzone": "^5.8.1",
     "express": "^4.17.1",
-    "highlight.js": "^10.5.0",
+    "highlight.js": "^10.7.1",
+    "is-svg": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^1.12.2",
+    "jwks-rsa": "^1.12.3",
     "leaflet": "^1.7.1",
-    "leaflet-gpx": "^1.5.0",
-    "leaflet-providers": "^1.9.1",
+    "leaflet-gpx": "^1.5.1",
+    "leaflet-providers": "^1.11.0",
     "lmap": "^0.1.24",
     "morgan": "^1.9.1",
     "util": "^0.12.2",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
     "vue-content-loading": "^1.6.0",
     "vue-property-decorator": "^8.4.0",
-    "vue-router": "^3.1.3",
-    "vue-upload-component": "^2.8.20",
-    "vue2-leaflet": "^2.5.2",
+    "vue-router": "^3.5.1",
+    "vue-upload-component": "^2.8.22",
+    "vue2-leaflet": "^2.6.0",
     "vue2-leaflet-height-graph": "^0.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-prettier": "^3.0.5",
     "babel-eslint": "^10.0.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
-    "stylus": "^0.54.7",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   },
   "prettier": {
     "singleQuote": false,
