--- a/package.json
+++ b/package.json
@@ -5,31 +5,30 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "preinstall": "npx npm-force-resolutions"
+    "lint": "vue-cli-service lint"
   },
   "resolutions": {
-    "ssri": ">=8.0.1",
+    "ssri": "^8.0.1",
     "is-svg": "^4.2.2"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.14.0",
+    "@auth0/auth0-spa-js": "^1.13.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "aws-iot-device-sdk": "^2.2.3",
-    "aws-sdk": "^2.880.0",
+    "aws-sdk": "^2.868.0",
     "axios": ">=0.21.1",
     "core-js": "^2.6.12",
-    "dropzone": "^5.9.2",
+    "dropzone": "^5.8.1",
     "express": "^4.17.1",
-    "highlight.js": "^10.7.2",
+    "highlight.js": "^10.7.1",
     "is-svg": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.12.3",
     "leaflet": "^1.7.1",
     "leaflet-gpx": "^1.5.1",
-    "leaflet-providers": "^1.12.0",
+    "leaflet-providers": "^1.11.0",
     "lmap": "^0.1.24",
     "morgan": "^1.9.1",
     "util": "^0.12.2",
@@ -38,9 +37,8 @@
     "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.5.1",
     "vue-upload-component": "^2.8.22",
-    "vue2-leaflet": "^2.7.0",
-    "vue2-leaflet-height-graph": "^0.1.2",
-    "y18n": "^5.0.6"
+    "vue2-leaflet": "^2.6.0",
+    "vue2-leaflet-height-graph": "^0.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
